README updated; Minor updates