@@ -1,9 +1,18 @@
 # Autoclicker
 
-Autoclicker Java desktop application with GUI controls which provide some techniques to bypass basic anti-autoclicker technologies, such as plain white noise, perlin noise and skipping clicks.
+Autoclicker Java desktop application with GUI controls which provide some techniques to bypass basic anti-autoclicker technologies, such as plain white noise, perlin noise and skipping clicks. Shortcuts can be easily setup.
+
+Needs the following arguments as VM options:<br>
+```--module-path "C:\Program Files\JavaFX\openjfx-22.0.2_windows-x64_bin-sdk\javafx-sdk-22.0.2\lib" --add-modules=javafx.base,javafx.controls,javafx.graphics,javafx.media,javafx.fxml```
 
 ## Credits & dependencies
 
-- [Perlin Noise Generator for Java by @alksily](https://gist.github.com/alksily/7a85a1898e65c936f861ee93516e397d)<br>
-- [JNativeHook by @kwhat for global keyboard input](https://github.com/kwhat/jnativehook)
 - [JavaFX](https://openjfx.io/)
+- [JNativeHook by @kwhat for global keyboard input](https://github.com/kwhat/jnativehook)<br>
+- [Perlin Noise Generator for Java by @alksily](https://gist.github.com/alksily/7a85a1898e65c936f861ee93516e397d)<br>
+
+## Screenshots
+
+![](/src/screenshots/screenshot1.png)
+![](/src/screenshots/screenshot2.png)
+![](/src/screenshots/screenshot3.png)
